codex-rs/core/tests/suite/snapshots/all__suite__model_visible_layout__model_visible_layout_cwd_change_refreshes_agents.snap
---
source: core/tests/suite/model_visible_layout.rs
expression: "format_labeled_requests_snapshot(\"Second turn changes cwd to a directory with different AGENTS.md; updated AGENTS instructions are re-injected.\",\n&[(\"First Request (agents_one)\", &requests[0]),\n(\"Second Request (agents_two cwd)\", &requests[1]),])"
---
Scenario: Second turn changes cwd to a directory with different AGENTS.md; updated AGENTS instructions are re-injected.

## First Request (agents_one)
00:message/developer:<PERMISSIONS_INSTRUCTIONS>
01:message/user[3]:
    [01] <AGENTS_MD>
    [02] <SKILLS_SECTION>
    [03] <ENVIRONMENT_CONTEXT:cwd=<CWD#1>>
02:message/user:first turn in agents_one

## Second Request (agents_two cwd)
00:message/developer:<PERMISSIONS_INSTRUCTIONS>
01:message/user[3]:
    [01] <AGENTS_MD>
    [02] <SKILLS_SECTION>
    [03] <ENVIRONMENT_CONTEXT:cwd=<CWD#1>>
02:message/user:first turn in agents_one
03:message/assistant:turn one complete
04:message/user[2]:
    [01] <AGENTS_MD>
    [02] <ENVIRONMENT_CONTEXT:cwd=<CWD#2>>
05:message/user:second turn in agents_two
